update comments